# showcase-dl

./: CHANGELOG.md  Cargo.toml  README.md  events.md  release.toml  renovate.json
.github/workflows/: rust.yml
src/: args.rs  error.rs  extract.rs  main.rs  process.rs  state.rs  trace.rs  ui.rs  util.rs
src/extract/: embeds.rs  player.rs
src/process/: event.rs  showcase.rs  simple_player.rs
src/state/: mod.rs  video.rs
src/state/video/: mod.rs  progress.rs
src/ui/: layout.rs  mod.rs  style.rs
