[package]
name = "showcase-dl"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
crossterm = { version = "0.26.0", features = ["event-stream"] }
futures = "0.3.24"
html-escape = "0.2.11"
json_dotpath = "1.1.0"
log = "0.4.17"
once_cell = "1.17.2"
ratatui = "0.21.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["macros", "rt", "rt-multi-thread", "process"] }
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-attributes = "0.1.22"
tracing-subscriber = "0.3.15"
