[package]
name = "showcase-dl"
version = "0.13.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.2.0"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
htmlize = { version = "1.0.5", features = ["unescape"] }
json_dotpath = "1.1.0"
log = "0.4.21"
nix = { version = "0.28.0", features = ["process", "signal"] }
once_cell = "1.19.0"
opentelemetry = "0.22"
opentelemetry-otlp = { version = "0.15.0", default-features = false, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
ratatui = "0.26.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = ["cookies", "rustls-tls"] }
serde_json = "1.0.115"
tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread", "process"] }
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
